--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav_bar_wrapper a{
+  padding-left: 20px;
+  text-decoration: none;
+}
+
+.delete{
+  background-color: #c21a1a;
+  color:white;
+  padding: 4px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.update{
+  background-color: rgb(10, 108, 10);
+  color:white;
+  padding: 4px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 10px;
+}
